fixed overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,5 @@
 
 body {
   background-color: #212428;
-  width: 100vw;
-  /* height: 300vh; */
+  width: 100%;
 }
